docs/ufl/1.2.0/source/ufl.finiteelement.rst
finiteelement Package
=====================

:mod:`finiteelement` Package
----------------------------

.. automodule:: ufl.finiteelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`elementlist` Module
-------------------------

.. automodule:: ufl.finiteelement.elementlist
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`enrichedelement` Module
-----------------------------

.. automodule:: ufl.finiteelement.enrichedelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`feec` Module
------------------

.. automodule:: ufl.finiteelement.feec
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`finiteelement` Module
---------------------------

.. automodule:: ufl.finiteelement.finiteelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`finiteelementbase` Module
-------------------------------

.. automodule:: ufl.finiteelement.finiteelementbase
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`mixedelement` Module
--------------------------

.. automodule:: ufl.finiteelement.mixedelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`restrictedelement` Module
-------------------------------

.. automodule:: ufl.finiteelement.restrictedelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`tensorproductelement` Module
----------------------------------

.. automodule:: ufl.finiteelement.tensorproductelement
    :members:
    :undoc-members:
    :show-inheritance:

