docs/ufl/1.6.0/source/ufl.finiteelement.rst

.. _ufl_finiteelement_package:

finiteelement Package
=====================

:mod:`finiteelement` Package
----------------------------

.. automodule:: ufl.finiteelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`brokenelement` Module
---------------------------

.. automodule:: ufl.finiteelement.brokenelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`elementlist` Module
-------------------------

.. automodule:: ufl.finiteelement.elementlist
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`enrichedelement` Module
-----------------------------

.. automodule:: ufl.finiteelement.enrichedelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`facetelement` Module
--------------------------

.. automodule:: ufl.finiteelement.facetelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`finiteelement` Module
---------------------------

.. automodule:: ufl.finiteelement.finiteelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`finiteelementbase` Module
-------------------------------

.. automodule:: ufl.finiteelement.finiteelementbase
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`hdivcurl` Module
----------------------

.. automodule:: ufl.finiteelement.hdivcurl
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`interiorelement` Module
-----------------------------

.. automodule:: ufl.finiteelement.interiorelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`mixedelement` Module
--------------------------

.. automodule:: ufl.finiteelement.mixedelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`outerproductelement` Module
---------------------------------

.. automodule:: ufl.finiteelement.outerproductelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`restrictedelement` Module
-------------------------------

.. automodule:: ufl.finiteelement.restrictedelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`tensorproductelement` Module
----------------------------------

.. automodule:: ufl.finiteelement.tensorproductelement
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`traceelement` Module
--------------------------

.. automodule:: ufl.finiteelement.traceelement
    :members:
    :undoc-members:
    :show-inheritance:

